--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "latest",
     "react-icons": "^4.11.0",
     "rehype-pretty-code": "^0.12.3",
-    "shikiji": "^0.9.0"
+    "shikiji": "^0.9.0",
+    "terser": "^5.26.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
