--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.12.3",
     "shikiji": "^0.9.0",
     "terser": "^5.26.0"
