--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "next": "latest",
     "next-mdx-remote": "^4.4.1",
+    "plaiceholder": "^3.0.0",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.12.3",
+    "sharp": "^0.33.4",
     "shikiji": "^0.9.0",
     "terser": "^5.26.0"
   },
